# chasi

./: README.md
arti_chasi_gazebo/: CMakeLists.txt  package.xml
arti_chasi_gazebo/config/: joint_controller_params.yaml
arti_chasi_gazebo/launch/: gazebo_with_ouster_16.launch  gazebo_with_ouster_64.launch  gazebo_with_sick.launch  gazebo_with_sick_outdoor.launch  joint_control_cmd_translator.launch  joint_controller_manager.launch  joy.launch  launch_chasi_sim_without_gazebo.launch  spawn_chasi_mark2.launch
arti_chasi_gazebo/rviz/: default.rviz
arti_chasi_gazebo/scripts/: control.py
arti_chasi_gazebo/worlds/: testworld_follower.world  testworld_follower_original.world
arti_chasi_mark2/: CMakeLists.txt  package.xml
arti_chasi_mark2/config/: vehicle.yaml
arti_chasi_mark2/launch/: arti_chasi_mark2_base.launch  arti_chasi_mark2_urdf.launch
arti_chasi_mark2/urdf/: arti_chasi_mark2.urdf.xacro  arti_chasi_mark2_standalone.urdf.xacro  general_macros.urdf.xacro  payload.urdf.xacro  wheels.urdf.xacro
arti_chasi_mark2/urdf/sensors/: Ouster_OS1_16.urdf.xacro  Ouster_OS1_32.urdf.xacro  Ouster_OS1_64.urdf.xacro  RealSense_D435.urdf.xacro  SICK_MRS1000.urdf.xacro  Velodyne_HDL32.urdf.xacro  Velodyne_Puck_Lite.urdf.xacro  gazebo_ground_truth.urdf.xacro  gps.urdf.xacro  imu.urdf.xacro
arti_convert_ackermann/: CMakeLists.txt  package.xml
arti_convert_ackermann/include/arti_convert_ackermann/: arti_convert_ackermann_node.h
arti_convert_ackermann/launch/: arti_convert_ackermann.launch
arti_convert_ackermann/src/: arti_convert_ackermann_node.cpp
